[+] Snapshots guide.